--- a/pay.html
+++ b/pay.html
@@ -7,117 +7,50 @@
   <link rel="stylesheet" href="style.css">
   <style>
     body{background:linear-gradient(135deg,#8e2de2,#4a00e0);min-height:100vh;display:flex;align-items:center;justify-content:center;padding:20px 20px 140px;}
-    .card{
-      background:white;
-      padding:70px 50px;
-      border-radius:40px;
-      box-shadow:0 35px 90px rgba(0,0,0,0.5);
-      text-align:center;
-      max-width:600px;
-      width:100%;
-    }
-    h1{
-      font-size:4rem;
-      color:#8e2de2;
-      margin-bottom:30px;
-    }
-    .form-group{
-      margin:25px 0;
-      text-align:left;
-    }
-    label{
-      display:block;
-      color:#555;
-      font-weight:600;
-      margin-bottom:8px;
-      font-size:1.1rem;
-    }
-    input{
-      width:100%;
-      padding:18px 22px;
-      font-size:1.5rem;
-      background:white;
-      border:5px solid #8e2de2;
-      border-radius:22px;
-      outline:none;
-      transition:0.3s;
-    }
-    input:focus{
-      border-color:#5a00c7;
-      box-shadow:0 0 20px rgba(142,45,226,0.3);
-    }
-    small{
-      color:#888;
-      font-size:1rem;
-      display:block;
-      margin-top:6px;
-    }
-    button{
-      width:100%;
-      padding:22px;
-      background:#8e2de2;
-      color:white;
-      border:none;
-      border-radius:50px;
-      font-size:1.9rem;
-      font-weight:800;
-      cursor:pointer;
-      margin-top:30px;
-      box-shadow:0 15px 40px rgba(142,45,226,0.4);
-      transition:0.3s;
-    }
-    button:hover{
-      transform:translateY(-8px);
-      box-shadow:0 25px 60px rgba(142,45,226,0.5);
-    }
-    .instructions{
-      background:#f0f5ff;
-      padding:35px;
-      border-radius:25px;
-      margin:50px 0;
-      font-size:1.35rem;
-      line-height:1.8;
-      display:none;
-    }
+    .card{background:white;padding:70px 50px;border-radius:40px;box-shadow:0 35px 90px rgba(0,0,0,0.5);text-align:center;max-width:600px;width:100%;}
+    h1{font-size:3.8rem;color:#8e2de2;margin-bottom:30px;}
+    input{width:100%;padding:18px;font-size:1.4rem;margin:15px 0;border:4px solid #8e2de2;border-radius:20px;background:white;color:#333;}
+    input:focus{border-color:#5a00c7;outline:none;box-shadow:0 0 20px rgba(142,45,226,0.3);}
+    small{color:#888;font-size:1rem;display:block;margin-top:-8px;margin-bottom:15px;}
+    button{width:100%;padding:20px;background:#8e2de2;color:white;border:none;border-radius:50px;font-size:1.8rem;font-weight:800;cursor:pointer;margin-top:20px;}
+    .instructions{background:#f0f5ff;padding:35px;border-radius:25px;margin:50px 0;font-size:1.35rem;line-height:1.8;display:none;}
+    .code-option{margin-top:40px;padding-top:40px;border-top:3px dashed #ccc;}
+    .code-option input{margin-top:20px;}
   </style>
 </head>
 <body>
 
   <div class="card">
     <h1>Accès PREMIUM</h1>
-    <p style="font-size:1.6rem;margin-bottom:40px;color:#555;">
-      Remplis le formulaire → je t’envoie ton code d’accès unique par WhatsApp
+    <p style="font-size:1.5rem;margin-bottom:40px;color:#555;">
+      100 FCFA → Accès illimité aux contenus exclusifs (examens, corrigés, TP rares…)
     </p>
 
-    <div class="form-group">
-      <label>Nom</label>
-      <input type="text" id="nom" required>
+    <!-- === FORMULAIRE === -->
+    <input type="text" id="nom" placeholder="Nom" required>
+    <input type="text" id="prenom" placeholder="Prénom" required>
+    <input type="text" id="whatsapp" placeholder="Numéro WhatsApp (ex: 0503588336)" required>
+    <small>8 ou 10 chiffres · espaces/tirets acceptés</small>
+    <input type="text" id="wave" placeholder="Numéro Wave (ex: 0712345678)" required>
+
+    <button id="btnManuel">PAYER PAR WAVE (100 FCFA)</button>
+
+    <!-- === OU AVEC UNE CLÉ D'ACCÈS === -->
+    <div class="code-option">
+      <p style="font-size:1.4rem;color:#555;margin-bottom:20px;">
+        <strong>OU</strong> tu as déjà une clé d’accès ?
+      </p>
+      <input type="text" id="codeInput" placeholder="Entre ton code ici">
+      <button onclick="verifierCode()">UTILISER LA CLÉ</button>
     </div>
 
-    <div class="form-group">
-      <label>Prénom</label>
-      <input type="text" id="prenom" required>
-    </div>
-
-    <div class="form-group">
-      <label>Numéro WhatsApp</label>
-      <input type="text" id="whatsapp" placeholder="Ex : 503588336 ou 0503588336" required>
-      <small>8 ou 10 chiffres · espaces et tirets acceptés</small>
-    </div>
-
-    <div class="form-group">
-      <label>Numéro Wave</label>
-      <input type="text" id="wave" placeholder="Ex : 0712345678" required>
-    </div>
-
-    <button id="btn">CONTINUER</button>
-
+    <!-- === INSTRUCTIONS APRÈS PAIEMENT MANUEL === -->
     <div id="instructions" class="instructions">
-      <h3 style="color:#8e2de2;font-size:2rem;">Paiement 100 FCFA par Wave</h3>
+      <h3 style="color:#8e2de2;font-size:2rem;">Paiement par Wave</h3>
       <p>
-        Envoie <strong>100 FCFA</strong> au numéro Wave :<br>
-        <strong style="font-size:2.4rem;color:#8e2de2;">07 XX XX XX XX</strong><br><br>
-        Dès réception, je t’envoie ton code d’accès unique (valable 24h).
+        Envoie <strong>100 FCFA</strong> au numéro :<br>
+        <strong style="font-size:2.4rem;color:#8e2de2;">05 03 58 83 36</strong><br><br>
+        Dès réception, je t’envoie ton code d’accès unique par WhatsApp.
       </p>
     </div>
   </div>
@@ -131,9 +64,11 @@
   </nav>
 
   <script>
-    const btn = document.getElementById("btn");
+    // TON NUMÉRO WHATSAPP (le même que Wave)
+    const TON_NUMERO = "0503588336";
 
-    btn.onclick = () => {
+    // Paiement manuel → envoie les infos sur ton WhatsApp
+    document.getElementById("btnManuel").onclick = () => {
       const nom = document.getElementById("nom").value.trim();
       const prenom = document.getElementById("prenom").value.trim();
       let whatsapp = document.getElementById("whatsapp").value.trim().replace(/[^0-9]/g, "");
@@ -148,23 +83,34 @@
         return;
       }
 
-      const tonNumero = "0503588336"; // Ton numéro
-
       const message = encodeURIComponent(
         `NOUVELLE DEMANDE PREMIUM\n\n` +
         `Nom : \( {prenom} \){nom}\n` +
         `WhatsApp : https://wa.me/225${whatsapp}\n` +
         `Wave : ${wave}\n\n` +
-        `Prix : 100 FCFA\n` +
-        `Date : ${new Date().toLocaleString("fr-FR")}`
+        `Prix : 100 FCFA`
       );
 
-      location.href = `https://wa.me/225\( {tonNumero}?text= \){message}`;
+      location.href = `https://wa.me/225\( {TON_NUMERO}?text= \){message}`;
 
       document.getElementById("instructions").style.display = "block";
-      btn.textContent = "MESSAGE ENVOYÉ !";
-      btn.disabled = true;
+      document.getElementById("btnManuel").textContent = "MESSAGE ENVOYÉ !";
+      document.getElementById("btnManuel").disabled = true;
     };
+
+    // Vérification clé d’accès
+    function verifierCode() {
+      const code = document.getElementById("codeInput").value.trim().toUpperCase();
+      const codesValides = ["MEGANE2025", "VIP2025", "PREMIUM100", "CODETEST"]; // ← tu ajoutes tes codes ici
+
+      if (codesValides.includes(code)) {
+        localStorage.setItem("meganePremium", "ok");
+        alert("Accès autorisé !");
+        location.href = "premium.html";
+      } else {
+        alert("Code invalide ou expiré");
+      }
+    }
   </script>
 </body>
 </html>
