--- a/pay.html
+++ b/pay.html
@@ -10,12 +10,10 @@
     .card{background:white;padding:70px 50px;border-radius:40px;box-shadow:0 35px 90px rgba(0,0,0,0.5);text-align:center;max-width:600px;width:100%;}
     h1{font-size:3.8rem;color:#8e2de2;margin-bottom:30px;}
     input{width:100%;padding:18px;font-size:1.4rem;margin:15px 0;border:4px solid #8e2de2;border-radius:20px;background:white;color:#333;}
-    input:focus{border-color:#5a00c7;outline:none;box-shadow:0 0 20px rgba(142,45,226,0.3);}
+    input:focus{border-color:#5a00c7;box-shadow:0 0 20px rgba(142,45,226,0.3);}
     small{color:#888;font-size:1rem;display:block;margin-top:-8px;margin-bottom:15px;}
     button{width:100%;padding:20px;background:#8e2de2;color:white;border:none;border-radius:50px;font-size:1.8rem;font-weight:800;cursor:pointer;margin-top:20px;}
     .instructions{background:#f0f5ff;padding:35px;border-radius:25px;margin:50px 0;font-size:1.35rem;line-height:1.8;display:none;}
-    .code-option{margin-top:40px;padding-top:40px;border-top:3px dashed #ccc;}
-    .code-option input{margin-top:20px;}
   </style>
 </head>
 <body>
@@ -23,39 +21,30 @@
   <div class="card">
     <h1>Accès PREMIUM</h1>
     <p style="font-size:1.5rem;margin-bottom:40px;color:#555;">
-      100 FCFA → Accès illimité aux contenus exclusifs (examens, corrigés, TP rares…)
+      Remplis le formulaire → je t’envoie ton code d’accès unique par WhatsApp
     </p>
 
-    <!-- === FORMULAIRE === -->
     <input type="text" id="nom" placeholder="Nom" required>
     <input type="text" id="prenom" placeholder="Prénom" required>
-    <input type="text" id="whatsapp" placeholder="Numéro WhatsApp (ex: 0503588336)" required>
-    <small>8 ou 10 chiffres · espaces/tirets acceptés</small>
-    <input type="text" id="wave" placeholder="Numéro Wave (ex: 0712345678)" required>
+    
+    <input type="text" id="whatsapp" placeholder="WhatsApp (ex: 0503588336)" required>
+    <small>8 ou 10 chiffres · espaces acceptés</small>
+    
+    <input type="text" id="wave" placeholder="Wave (ex: 0712345678)" required>
 
-    <button id="btnManuel">PAYER PAR WAVE (100 FCFA)</button>
+    <button id="btn">ENVOYER LA DEMANDE</button>
 
-    <!-- === OU AVEC UNE CLÉ D'ACCÈS === -->
-    <div class="code-option">
-      <p style="font-size:1.4rem;color:#555;margin-bottom:20px;">
-        <strong>OU</strong> tu as déjà une clé d’accès ?
-      </p>
-      <input type="text" id="codeInput" placeholder="Entre ton code ici">
-      <button onclick="verifierCode()">UTILISER LA CLÉ</button>
-    </div>
-
-    <!-- === INSTRUCTIONS APRÈS PAIEMENT MANUEL === -->
     <div id="instructions" class="instructions">
-      <h3 style="color:#8e2de2;font-size:2rem;">Paiement par Wave</h3>
+      <h3 style="color:#8e2de2;">Paiement 100 FCFA par Wave</h3>
       <p>
         Envoie <strong>100 FCFA</strong> au numéro :<br>
         <strong style="font-size:2.4rem;color:#8e2de2;">05 03 58 83 36</strong><br><br>
-        Dès réception, je t’envoie ton code d’accès unique par WhatsApp.
+        Dès réception, je t’envoie ton code d’accès unique (valable 24h).
       </p>
     </div>
   </div>
 
-  <!-- BARRE DE NAVIGATION FIXE EN BAS -->
+  <!-- BARRE EN BAS -->
   <nav class="bottom-nav">
     <a href="index.html">ACCUEIL</a>
     <a href="rech.html">RECHERCHE</a>
@@ -64,11 +53,7 @@
   </nav>
 
   <script>
-    // TON NUMÉRO WHATSAPP (le même que Wave)
-    const TON_NUMERO = "0503588336";
-
-    // Paiement manuel → envoie les infos sur ton WhatsApp
-    document.getElementById("btnManuel").onclick = () => {
+    document.getElementById("btn").onclick = () => {
       const nom = document.getElementById("nom").value.trim();
       const prenom = document.getElementById("prenom").value.trim();
       let whatsapp = document.getElementById("whatsapp").value.trim().replace(/[^0-9]/g, "");
@@ -83,6 +68,8 @@
         return;
       }
 
+      const tonNumero = "0503588336"; // ← TON NUMÉRO
+
       const message = encodeURIComponent(
         `NOUVELLE DEMANDE PREMIUM\n\n` +
         `Nom : \( {prenom} \){nom}\n` +
@@ -91,26 +78,20 @@
         `Prix : 100 FCFA`
       );
 
-      location.href = `https://wa.me/225\( {TON_NUMERO}?text= \){message}`;
+      // LE LIEN QUI OUVRE WHATSAPP DIRECT SANS DEMANDER L'APP
+      const lienDirect = `whatsapp://send?phone=225\( {tonNumero}&text= \){message}`;
+
+      // Essaie d’abord la méthode directe, sinon fallback
+      try {
+        location.href = lienDirect;
+      } catch (e) {
+        location.href = `https://wa.me/225\( {tonNumero}?text= \){message}`;
+      }
 
       document.getElementById("instructions").style.display = "block";
-      document.getElementById("btnManuel").textContent = "MESSAGE ENVOYÉ !";
-      document.getElementById("btnManuel").disabled = true;
+      document.getElementById("btn").textContent = "MESSAGE ENVOYÉ !";
+      document.getElementById("btn").disabled = true;
     };
-
-    // Vérification clé d’accès
-    function verifierCode() {
-      const code = document.getElementById("codeInput").value.trim().toUpperCase();
-      const codesValides = ["MEGANE2025", "VIP2025", "PREMIUM100", "CODETEST"]; // ← tu ajoutes tes codes ici
-
-      if (codesValides.includes(code)) {
-        localStorage.setItem("meganePremium", "ok");
-        alert("Accès autorisé !");
-        location.href = "premium.html";
-      } else {
-        alert("Code invalide ou expiré");
-      }
-    }
   </script>
 </body>
 </html>
