--- a/pay.html
+++ b/pay.html
@@ -3,90 +3,63 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Paiement Premium • Megane Learn</title>
-  <link rel="stylesheet" href="style.css">
+  <title>Devenir Premium - Paiement Manuel</title>
   <style>
-    body{background:linear-gradient(135deg,#8e2de2,#4a00e0);min-height:100vh;display:flex;align-items:center;justify-content:center;padding:20px 20px 140px;}
-    .card{background:white;padding:70px 50px;border-radius:40px;box-shadow:0 35px 90px rgba(0,0,0,0.5);text-align:center;max-width:600px;width:100%;}
-    h1{font-size:3.8rem;color:#8e2de2;margin-bottom:30px;}
-    input{width:100%;padding:18px;font-size:1.4rem;margin:15px 0;border:4px solid #8e2de2;border-radius:20px;background:white;color:#333;}
-    input:focus{border-color:#5a00c7;box-shadow:0 0 20px rgba(142,45,226,0.3);}
-    small{color:#888;font-size:1rem;display:block;margin-top:-8px;margin-bottom:15px;}
-    button{width:100%;padding:20px;background:#8e2de2;color:white;border:none;border-radius:50px;font-size:1.8rem;font-weight:800;cursor:pointer;margin-top:20px;}
-    .instructions{background:#f0f5ff;padding:35px;border-radius:25px;margin:50px 0;font-size:1.35rem;line-height:1.8;display:none;}
+    body {font-family: Arial, sans-serif;background:#f4f4f4;margin:0;padding:20px;}
+    .container {max-width:500px;margin:40px auto;background:white;padding:40px;border-radius:15px;box-shadow:0 10px 30px rgba(0,0,0,0.1);text-align:center;}
+    h1 {color:#2c3e50;}
+    input, button {width:100%;padding:14px;margin:12px 0;border:1px solid #ddd;border-radius:8px;font-size:16px;}
+    button {background:#25D366;color:white;font-weight:bold;border:none;cursor:pointer;font-size:18px;}
+    button:hover {background:#128C7E;}
+    .info {margin:20px 0;color:#555;font-size:14px;}
   </style>
 </head>
 <body>
 
-  <div class="card">
-    <h1>Accès PREMIUM</h1>
-    <p style="font-size:1.5rem;margin-bottom:40px;color:#555;">
-      Remplis le formulaire → je t’envoie ton code d’accès unique par WhatsApp
-    </p>
+<div class="container">
+  <h1>Accès Premium</h1>
+  <p>Remplis le formulaire pour recevoir ton code d’accès</p>
+  
+  <input type="text" id="nom" placeholder="Nom complet (ex: Jean Dupont)" required>
+  <input type="tel" id="whatsapp" placeholder="Numéro WhatsApp (ex: 0503588336)" required>
+  <input type="tel" id="wave" placeholder="Numéro Wave / Orange Money" required>
 
-    <input type="text" id="nom" placeholder="Nom" required>
-    >
-    <input type="text" id="prenom" placeholder="Prénom" required>
-    
-    <input type="text" id="whatsapp" placeholder="WhatsApp (ex: 0503588336)" required>
-    <small>8 ou 10 chiffres · espaces acceptés</small>
-    
-    <input type="text" id="wave" placeholder="Wave (ex: 0712345678)" required>
-
-    <button id="btn">ENVOYER LA DEMANDE</button>
-
-    <div id="instructions" class="instructions">
-      <h3 style="color:#8e2de2;">Paiement 100 FCFA par Wave</h3>
-      <p>
-        Envoie <strong>100 FCFA</strong> au numéro :<br>
-        <strong style="font-size:2.4rem;color:#8e2de2;">05 03 58 83 36</strong><br><br>
-        Dès réception, je t’envoie ton code d’accès unique (valable 24h).
-      </p>
-    </div>
+  <div class="info">
+    <strong>Prix : 5 000 FCFA</strong><br>
+    Tu recevras ton code en moins de 5 minutes après paiement !
   </div>
 
-  <!-- BARRE EN BAS -->
-  <nav class="bottom-nav">
-    <a href="index.html">ACCUEIL</a>
-    <a href="rech.html">RECHERCHE</a>
-    <a href="bt.html">PRO</a>
-    <a href="gd.html">GUIDE</a>
-  </nav>
+  <button onclick="envoyerWhatsApp()">Soumettre ma demande</button>
+</div>
 
-  <script>
-    document.getElementById("btn").onclick = () => {
-      const nom = document.getElementById("nom").value.trim();
-      const prenom = document.getElementById("prenom").value.trim();
-      let whatsapp = document.getElementById("whatsapp").value.trim().replace(/[^0-9]/g, "");
-      const wave = document.getElementById("wave").value.trim();
+<script>
+function envoyerWhatsApp() {
+  const nom = document.getElementById('nom').value.trim();
+  const whatsapp = document.getElementById('whatsapp').value.trim().replace(/[^0-9]/g, ''); // enlève espaces, +, etc.
+  const wave = document.getElementById('wave').value.trim();
 
-      if (whatsapp.length < 8 || whatsapp.length > 10) {
-        alert("Numéro WhatsApp invalide !");
-        return;
-      }
-      if (!nom || !prenom || !whatsapp || !wave) {
-        alert("Tous les champs sont obligatoires !");
-        return;
-      }
+  if (!nom || !whatsapp || !wave) {
+    alert("⚠️ Tous les champs sont obligatoires !");
+    return;
+  }
 
-      // TON NUMÉRO (déjà mis)
-      const tonNumero = "0503588336";
+  // ─── TON numéro WhatsApp (change seulement ici) ───
+  const monNumero = "2250503588336"; // ←← c’est TON numéro à toi
 
-      const message = encodeURIComponent(
-        `NOUVELLE DEMANDE PREMIUM\n\n` +
-        `Nom : \( {prenom} \){nom}\n` +
-        `WhatsApp : https://wa.me/225${whatsapp}\n` +
-        `Wave : ${wave}\n\n` +
-        `Prix : 100 FCFA`
-      );
+  // Formatage du numéro de l'utilisateur pour créer un lien direct
+  const numeroFormate = whatsapp.startsWith('221') ? whatsapp : (whatsapp.startsWith('77') || whatsapp.startsWith('78') || whatsapp.startsWith('76') || whatsapp.startsWith('70') || whatsapp.startsWith('75')) ? '221' + whatsapp.substring(1) : '221' + whatsapp;
+  const lienWhatsAppUser = `https://wa.me/${numeroFormate}`;
 
-      // OUVRE WHATSAPP DIRECT SANS POPUP
-      location.href = `https://wa.me/225\( {tonNumero}?text= \){message}`;
+  const message = `Bonjour !%0A%0AJe souhaite l'accès Premium%0A%0A👤 Nom : \( {encodeURIComponent(nom)}%0A📱 WhatsApp : \){lienWhatsAppUser}%0A💰 Wave/OM : ${wave}%0A%0AMontant : 5 000 FCFA%0A%0AMerci de m'envoyer le code après paiement !`;
 
-      document.getElementById("instructions").style.display = "block";
-      document.getElementById("btn").textContent = "MESSAGE ENVOYÉ !";
-      document.getElementById("btn").disabled = true;
-    };
-  </script>
+  const url = `https://wa.me/\( {monNumero}?text= \){message}`;
+  window.open(url, '_blank');
+
+  setTimeout(() => {
+    alert("WhatsApp s’ouvre ! Envoie le message et je te donne ton code très vite !");
+  }, 500);
+}
+</script>
+
 </body>
-</html>
+    </html>
